maybe a fix for homescreen

--- a/react-resume/package.json
+++ b/react-resume/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-resume",
-  "homepage": "https://ryanfritzc.github.io/reactResume",
+  "homepage": "https://ryanfritzc.github.io/reactResume/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
